@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.10 (Release 140)"
+#define KPPPVERSION "1.5.11 (Release 141)"
 #endif
