@@ -1,3 +1,7 @@
+1998-12-01  Harri Porten  <porten@kde.org>
+
+	* main.cpp: notify user about death of helper process and abort
+
 1998-11-28  Harri Porten  <porten@kde.org>
 
 	* main.cpp: restored accidentally deleted line (setPassword())
